# cpp-first-att

Task_1 (8)/: main.cpp
Task_2 (8)/: CMakeLists.txt  Game.cpp  Game.h  GameField.cpp  GameField.h  main.cpp
Task_2 (8)/Entities/: Character.h
Task_2 (8)/Entities/Playable/: Farmer.cpp  Farmer.h  Mole.cpp  Mole.h
Task_2 (8)/Utils/: Painter.cpp  Painter.h  Randomer.cpp  Randomer.h  Vector2.cpp  Vector2.h
